[package]
name = "mow"
authors = ["Ola Næss Kaldestad <mail@okal.no>"]
version = "0.1.0"
edition = "2021"
description = """

Cross platform CLI tool for Glorious' Model O Wireless.

Reverse engineered using USB packet logs sniffed with
WireShark and USBPcap, as well as decompiled Windows
software (Glorious Core).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
hidapi = "1.3.3"
colored = "2.0.0"