[package]
name = "mow"
authors = ["Ola Næss Kaldestad <mail@okal.no>", "Damian Bednarczyk <dbednarczyk@gmail.com"]
version = "0.1.0"
edition = "2021"
description = """
Cross platform CLI tool for Glorious' Model O Wireless.

Reverse engineered using USB packet logs sniffed with
WireShark and USBPcap, as well as decompiled Windows
software (Glorious Core).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0-rc", features = ["derive"] }
hidapi = "1.4"
colored = "2.0"
